kubernetes/apps/safe-settings/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safe-settings
  namespace: security
  labels:
    app: safe-settings
spec:
  selector:
    app: safe-settings
  ports:
    - name: http
      port: 3000
      targetPort: http
